services/web-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - solarianetwork.site
      secretName: web-app-tls
    - hosts:
        - origin.solarianetwork.site
      secretName: web-app-origin-tls
  rules:
    - host: solarianetwork.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 80
    - host: origin.solarianetwork.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 80
